--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 fastapi
+uvicorn
 pymongo
 python-dotenv
-uvicorn
+passlib[bcrypt]
+python-jose[cryptography]
+dnspython
+python-multipart
+django
+requests
